# okami-utils

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: animal_id.yaml  area_id.yaml  container_state_id.yaml  container_type_id.yaml  enemy_id.yaml  item_id.yaml  loot_box_id.yaml  object_category_id.yaml
gltf/: CMakeLists.txt  generate_gltf.cpp  gltf.cpp  gltf.h  gltf_config.json  gltf_sca.cpp  gltf_sca.h  parse_model.cpp
gltf/wrappers/: gltf_akt.cpp  gltf_akt.h  gltf_zone.cpp  gltf_zone.h
include/okami-utils/: ak.h  akt.h  ans.h  archive.h  common.h  ect.h  event.h  its.h  mesh_division.h  model.h  objtbl.h  randtbl.h  sca.h  scr.h  submesh.h  zone.h
src/: ak.cpp  akt.cpp  ans.cpp  archive.cpp  common.cpp  ect.cpp  event.cpp  its.cpp  mesh_division.cpp  model.cpp  objtbl.cpp  randtbl.cpp  sca.cpp  scr.cpp  submesh.cpp  zone.cpp
tools/: CMakeLists.txt  akt_to_obj.cpp  convert_collision.cpp  generate_gltf.cpp  pack_akt.cpp  parse_ect.cpp  parse_its.cpp  parse_objtbl.cpp  parse_randtbl.cpp  parse_sca.cpp  parse_zones.cpp  print_ans.cpp  print_its.cpp  unpack_akt.cpp  unpack_event.cpp
